--- a/assets/styles/scss/views/_homepage.scss
+++ b/assets/styles/scss/views/_homepage.scss
@@ -35,4 +35,11 @@
       overflow: scroll;
     }
   }
+  
+  #make-review-section
+  {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
