--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -64,5 +64,5 @@
         ?>
     </footer>
 </body>
-<script type="module" src="assets/js/index.js"></script>
+<script type="module" src="assets/js/leftAsideParameters.js"></script>
 </html>
