--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -19,40 +19,44 @@
         <fieldset>
             <label for="username">Username</label>
             <input type="text" name="username" id="username" autocomplete="none" required maxlength="50" onpaste="return false;">
-            <span id="error_username"><?php
+            <span id="error_username"<?php
                 if(isset($this->data["message"]) && $this->data["field"] === "username")
                 {
-                    echo $this->data["message"];
+                    ?> class="content-write">
+                    <?= $this->data["message"];
                 }
             ?></span>
         </fieldset>
         <fieldset>
             <label for="email">Email</label>
             <input type="email" name="email" id="email" autocomplete="email" required maxlength="50" onpaste="return false;">
-            <span id="error_email"><?php
+            <span id="error_email"<?php
                 if(isset($this->data["message"]) && $this->data["field"] === "email")
                 {
-                    echo $this->data["message"];
+                    ?> class="content-write">
+                    <?= $this->data["message"];
                 }
             ?></span>
         </fieldset>
         <fieldset>
             <label for="password">Password</label>
             <input type="password" name="password" id="password" autocomplete="new-password" required minlength="12" onpaste="return false;">
-            <span id="error_password"><?php
+            <span id="error_password"<?php
                 if(isset($this->data["message"]) && $this->data["field"] === "password")
                 {
-                    echo $this->data["message"];
+                    ?> class="content-write">
+                    <?= $this->data["message"];
                 }
             ?></span>
         </fieldset>
         <fieldset>
             <label for="confirm_password">Confirm password</label>
             <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" required minlength="12" onpaste="return false;">
-            <span id="error_confirm_password"><?php
+            <span id="error_confirm_password"<?php
                 if(isset($this->data["message"]) && $this->data["field"] === "confirm_password")
                 {
-                    echo $this->data["message"];
+                    ?> class="content-write">
+                    <?= $this->data["message"];
                 }
             ?></span>
         </fieldset>
