--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -21,178 +21,179 @@
         if(isset($this->data["message"]) && $this->data["field"] === "general") //* Si on à un message dans la data
         {
         ?>
-            <span class="success"><?=$this->data["message"]; ?></span>
+            <span class="success"><?=$this->data["message"];?></span>
         <?php
         }
     ?>
-    <form action="index.php?route=account" method="POST" id="account_form">
-        <fieldset>
-            <label for="username">Nom d'utilisateur</label>
-            <input type="text" name="username" id="username"  autocomplete="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
-            <span id="error_username"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "username")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" autocomplete="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
-            <span id="error_email"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "email")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
-            <span id="error_password"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "password")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="confirm_password">Confirmation du password</label>
-            <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
-            <span id="error_confirm_password"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "confirm_password")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="first_name">Prénom</label>
-            <input type="text" name="first_name" id="first_name" 
-            <?php 
-                if(!$info->getFirstName())
-                {
-                    echo 'placeholder="Votre prénom"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getFirstName() . '"';
-                }
-            ?> 
-            maxlength="50" onpaste="return false;">
-            <span id="error_first_name"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "first_name")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="last_name">Nom</label>
-            <input type="text" name="last_name" id="last_name"
-            <?php 
-                if(!$info->getLastName())
-                {
-                    echo 'placeholder="Votre nom"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getLastName() . '"';
-                }
-            ?> 
-            maxlength="50" onpaste="return false;">
-            <span id="error_last_name"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "last_name")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="tel">Téléphone</label>
-            <input type="text" name="tel" id="tel"
-            <?php 
-                if(!$info->getTel())
-                {
-                    echo 'placeholder="xxxxxxxxxx"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getTel() . '"';
-                }
-            ?>
-            maxlength="10" onpaste="return false;">
-            <span id="error_tel"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "tel")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="address">Adresse</label>
-            <input type="text" name="address" id="address"
-            <?php 
-                if(!$info->getAddress())
-                {
-                    echo 'placeholder="Votre adresse"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getAddress() . '"';
-                }
-            ?>
-            maxlength="255" onpaste="return false;">
-            <span id="error_address"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "address")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="zip">Code Postal</label>
-            <input type="text" name="zip" id="zip"
-            <?php 
-                if(!$info->getZip())
-                {
-                    echo 'placeholder="Votre code postal"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getZip() . '"';
-                }
-            ?>
-            maxlength="15" onpaste="return false;">
-            <span id="error_zip"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "zip")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <fieldset>
-            <label for="city">Ville</label>
-            <input type="text" name="city" id="city"
-            <?php 
-                if(!$info->getCity())
-                {
-                    echo 'placeholder="Votre ville"';
-                }
-                else
-                {
-                    echo 'value="' . $info->getCity() . '"';
-                }
-            ?>
-            maxlength="100" onpaste="return false;">
-            <span id="error_city"><?php
-                if(isset($this->data["message"]) && $this->data["field"] === "city")
-                {
-                    echo $this->data["message"];
-                }
-            ?></span>
-        </fieldset>
-        <input type="submit" value="Éditer mon profil">
-    </form>
+    <section id="edit-account">
+        <form action="index.php?route=account" method="POST" id="account_form">
+            <fieldset>
+                <label for="username">Nom d'utilisateur</label>
+                <input type="text" name="username" id="username"  autocomplete="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
+                <span id="error_username" <?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "username")
+                    {
+                        ?>class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" autocomplete="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
+                <span id="error_email"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "email")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
+                <span id="error_password"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "password")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="confirm_password">Confirmation du password</label>
+                <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
+                <span id="error_confirm_password"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "confirm_password")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="first_name">Prénom</label>
+                <input type="text" name="first_name" id="first_name" 
+                <?php 
+                    if(!$info->getFirstName())
+                    {
+                        echo 'placeholder="Votre prénom"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getFirstName() . '"';
+                    }?> 
+                maxlength="50" onpaste="return false;">
+                <span id="error_first_name"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "first_name")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="last_name">Nom</label>
+                <input type="text" name="last_name" id="last_name"
+                <?php 
+                    if(!$info->getLastName())
+                    {
+                        echo 'placeholder="Votre nom"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getLastName() . '"';
+                    }
+                ?> 
+                maxlength="50" onpaste="return false;">
+                <span id="error_last_name"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "last_name")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="tel">Téléphone</label>
+                <input type="text" name="tel" id="tel"
+                <?php 
+                    if(!$info->getTel())
+                    {
+                        echo 'placeholder="xxxxxxxxxx"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getTel() . '"';
+                    }?>
+                maxlength="10" onpaste="return false;">
+                <span id="error_tel"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "tel")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="address">Adresse</label>
+                <input type="text" name="address" id="address"
+                <?php 
+                    if(!$info->getAddress())
+                    {
+                        echo 'placeholder="Votre adresse"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getAddress() . '"';
+                    }?>
+                maxlength="255" onpaste="return false;">
+                <span id="error_address"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "address")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="zip">Code Postal</label>
+                <input type="text" name="zip" id="zip"
+                <?php 
+                    if(!$info->getZip())
+                    {
+                        echo 'placeholder="Votre code postal"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getZip() . '"';
+                    }?>
+                maxlength="15" onpaste="return false;">
+                <span id="error_zip"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "zip")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <fieldset>
+                <label for="city">Ville</label>
+                <input type="text" name="city" id="city"
+                <?php 
+                    if(!$info->getCity())
+                    {
+                        echo 'placeholder="Votre ville"';
+                    }
+                    else
+                    {
+                        echo 'value="' . $info->getCity() . '"';
+                    }?>
+                maxlength="100" onpaste="return false;">
+                <span id="error_city"<?php
+                    if(isset($this->data["field"]) && $this->data["field"] === "city")
+                    {
+                        ?> class="content-write">
+                        <?=$this->data["message"];
+                    }?></span>
+            </fieldset>
+            <input type="submit" value="Éditer mon profil">
+        </form>
+    </section>
+    <section id="view-requests">
+        
+    </section>
+    
 </main>
 <script type="module" src="assets/js/account.js"></script>
